hugr-llvm/src/extension/collections/snapshots/hugr_llvm__extension__collections__borrow_array__test__emit_all_ops@llvm21.snap
---
source: hugr-llvm/src/extension/collections/borrow_array.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

@0 = private unnamed_addr constant [34 x i8] c"Array element is already borrowed\00", align 1
@prelude.panic_template = private unnamed_addr constant [34 x i8] c"Program panicked (signal %i): %s\0A\00", align 1
@1 = private unnamed_addr constant [37 x i8] c"Expected variant 1 but got variant 0\00", align 1
@prelude.panic_template.1 = private unnamed_addr constant [34 x i8] c"Program panicked (signal %i): %s\0A\00", align 1
@2 = private unnamed_addr constant [37 x i8] c"Expected variant 1 but got variant 0\00", align 1
@prelude.panic_template.2 = private unnamed_addr constant [34 x i8] c"Program panicked (signal %i): %s\0A\00", align 1
@3 = private unnamed_addr constant [37 x i8] c"Expected variant 1 but got variant 0\00", align 1
@prelude.panic_template.3 = private unnamed_addr constant [34 x i8] c"Program panicked (signal %i): %s\0A\00", align 1
@4 = private unnamed_addr constant [37 x i8] c"Expected variant 1 but got variant 0\00", align 1
@prelude.panic_template.4 = private unnamed_addr constant [34 x i8] c"Program panicked (signal %i): %s\0A\00", align 1
@5 = private unnamed_addr constant [37 x i8] c"Expected variant 1 but got variant 0\00", align 1
@prelude.panic_template.5 = private unnamed_addr constant [34 x i8] c"Program panicked (signal %i): %s\0A\00", align 1

define internal void @_hl.main.1() !dbg !3 {
alloca_block:
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  %array_size = mul i64 2, ptrtoint (ptr getelementptr (i64, ptr null, i32 1) to i64), !dbg !7
  %0 = call ptr @malloc(i64 %array_size), !dbg !7
  %1 = call ptr @malloc(i64 ptrtoint (ptr getelementptr (i64, ptr null, i32 1) to i64)), !dbg !7
  call void @llvm.memset.p0.i64(ptr %1, i8 0, i64 ptrtoint (ptr getelementptr (i64, ptr null, i32 1) to i64), i1 false), !dbg !7
  %2 = insertvalue { ptr, ptr, i64 } poison, ptr %0, 0, !dbg !7
  %3 = insertvalue { ptr, ptr, i64 } %2, ptr %1, 1, !dbg !7
  %4 = insertvalue { ptr, ptr, i64 } %3, i64 0, 2, !dbg !7
  %5 = getelementptr inbounds i64, ptr %0, i64 0, !dbg !7
  store i64 1, ptr %5, align 4, !dbg !7
  %6 = getelementptr inbounds i64, ptr %0, i64 1, !dbg !7
  store i64 2, ptr %6, align 4, !dbg !7
  %array_size5 = mul i64 2, ptrtoint (ptr getelementptr (i64, ptr null, i32 1) to i64), !dbg !8
  %7 = call ptr @malloc(i64 %array_size5), !dbg !8
  %8 = call ptr @malloc(i64 ptrtoint (ptr getelementptr (i64, ptr null, i32 1) to i64)), !dbg !8
  call void @llvm.memset.p0.i64(ptr %8, i8 0, i64 ptrtoint (ptr getelementptr (i64, ptr null, i32 1) to i64), i1 false), !dbg !8
  %9 = insertvalue { ptr, ptr, i64 } poison, ptr %7, 0, !dbg !8
  %10 = insertvalue { ptr, ptr, i64 } %9, ptr %8, 1, !dbg !8
  %11 = insertvalue { ptr, ptr, i64 } %10, i64 0, 2, !dbg !8
  %12 = getelementptr inbounds i64, ptr %7, i64 0, !dbg !8
  store i64 1, ptr %12, align 4, !dbg !8
  %13 = getelementptr inbounds i64, ptr %7, i64 1, !dbg !8
  store i64 2, ptr %13, align 4, !dbg !8
  %array_ptr = extractvalue { ptr, ptr, i64 } %11, 0, !dbg !9
  %array_mask_ptr = extractvalue { ptr, ptr, i64 } %11, 1, !dbg !9
  %array_offset = extractvalue { ptr, ptr, i64 } %11, 2, !dbg !9
  %14 = add i64 %array_offset, 0, !dbg !9
  call void @__barray_mask_check_not_borrowed(ptr %array_mask_ptr, i64 %14), !dbg !9
  %15 = getelementptr inbounds i64, ptr %array_ptr, i64 %14, !dbg !9
  %16 = load i64, ptr %15, align 4, !dbg !9
  %17 = add i64 %array_offset, 1, !dbg !9
  call void @__barray_mask_check_not_borrowed(ptr %array_mask_ptr, i64 %17), !dbg !9
  %18 = getelementptr inbounds i64, ptr %array_ptr, i64 %17, !dbg !9
  %19 = load i64, ptr %18, align 4, !dbg !9
  %array_ptr10 = extractvalue { ptr, ptr, i64 } %4, 0, !dbg !10
  %array_mask_ptr11 = extractvalue { ptr, ptr, i64 } %4, 1, !dbg !10
  %array_offset12 = extractvalue { ptr, ptr, i64 } %4, 2, !dbg !10
  %20 = icmp ult i64 0, 2, !dbg !10
  %21 = icmp ult i64 1, 2, !dbg !10
  %22 = and i1 %20, %21, !dbg !10
  br i1 %22, label %25, label %23, !dbg !10

23:                                               ; preds = %entry_block
  %24 = insertvalue { i1, { ptr, ptr, i64 } } { i1 false, { ptr, ptr, i64 } poison }, { ptr, ptr, i64 } %4, 1, !dbg !10
  br label %33, !dbg !10

25:                                               ; preds = %entry_block
  %26 = add i64 0, %array_offset12, !dbg !10
  %27 = add i64 1, %array_offset12, !dbg !10
  call void @__barray_mask_check_not_borrowed(ptr %array_mask_ptr11, i64 %26), !dbg !10
  call void @__barray_mask_check_not_borrowed(ptr %array_mask_ptr11, i64 %27), !dbg !10
  %28 = getelementptr inbounds i64, ptr %array_ptr10, i64 %26, !dbg !10
  %29 = load i64, ptr %28, align 4, !dbg !10
  %30 = getelementptr inbounds i64, ptr %array_ptr10, i64 %27, !dbg !10
  %31 = load i64, ptr %30, align 4, !dbg !10
  store i64 %31, ptr %28, align 4, !dbg !10
  store i64 %29, ptr %30, align 4, !dbg !10
  %32 = insertvalue { i1, { ptr, ptr, i64 } } { i1 true, { ptr, ptr, i64 } poison }, { ptr, ptr, i64 } %4, 1, !dbg !10
  br label %33, !dbg !10

33:                                               ; preds = %23, %25
  %"0.0" = phi { i1, { ptr, ptr, i64 } } [ %32, %25 ], [ %24, %23 ], !dbg !10
  %34 = extractvalue { i1, { ptr, ptr, i64 } } %"0.0", 0
  switch i1 %34, label %35 [
    i1 true, label %37
  ]

35:                                               ; preds = %33
  %36 = extractvalue { i1, { ptr, ptr, i64 } } %"0.0", 1
  br label %cond_19_case_0

37:                                               ; preds = %33
  %38 = extractvalue { i1, { ptr, ptr, i64 } } %"0.0", 1
  br label %cond_19_case_1

cond_19_case_0:                                   ; preds = %35
  %39 = extractvalue { i32, ptr } { i32 1, ptr @1 }, 0, !dbg !11
  %40 = extractvalue { i32, ptr } { i32 1, ptr @1 }, 1, !dbg !11
  %41 = call i32 (ptr, ...) @printf(ptr @prelude.panic_template.1, i32 %39, ptr %40), !dbg !11
  call void @abort(), !dbg !11
  br label %cond_exit_19

cond_19_case_1:                                   ; preds = %37
  br label %cond_exit_19

cond_exit_19:                                     ; preds = %cond_19_case_1, %cond_19_case_0
  %"015.0" = phi { ptr, ptr, i64 } [ zeroinitializer, %cond_19_case_0 ], [ %38, %cond_19_case_1 ]
  %array_ptr27 = extractvalue { ptr, ptr, i64 } %"015.0", 0, !dbg !12
  %array_mask_ptr28 = extractvalue { ptr, ptr, i64 } %"015.0", 1, !dbg !12
  %array_offset29 = extractvalue { ptr, ptr, i64 } %"015.0", 2, !dbg !12
  %42 = icmp ult i64 0, 2, !dbg !12
  br i1 %42, label %44, label %43, !dbg !12

43:                                               ; preds = %cond_exit_19
  br label %49, !dbg !12

44:                                               ; preds = %cond_exit_19
  %45 = add i64 0, %array_offset29, !dbg !12
  call void @__barray_mask_check_not_borrowed(ptr %array_mask_ptr28, i64 %45), !dbg !12
  %46 = getelementptr inbounds i64, ptr %array_ptr27, i64 %45, !dbg !12
  %47 = load i64, ptr %46, align 4, !dbg !12
  %48 = insertvalue { i1, i64 } { i1 true, i64 poison }, i64 %47, 1, !dbg !12
  br label %49, !dbg !12

49:                                               ; preds = %43, %44
  %"030.0" = phi { i1, i64 } [ %48, %44 ], [ { i1 false, i64 poison }, %43 ], !dbg !12
  %50 = extractvalue { i1, i64 } %"030.0", 0
  switch i1 %50, label %51 [
    i1 true, label %52
  ]

51:                                               ; preds = %49
  br label %cond_31_case_0

52:                                               ; preds = %49
  %53 = extractvalue { i1, i64 } %"030.0", 1
  br label %cond_31_case_1

cond_31_case_0:                                   ; preds = %51
  %54 = extractvalue { i32, ptr } { i32 1, ptr @2 }, 0, !dbg !13
  %55 = extractvalue { i32, ptr } { i32 1, ptr @2 }, 1, !dbg !13
  %56 = call i32 (ptr, ...) @printf(ptr @prelude.panic_template.2, i32 %54, ptr %55), !dbg !13
  call void @abort(), !dbg !13
  br label %cond_exit_31

cond_31_case_1:                                   ; preds = %52
  br label %cond_exit_31

cond_exit_31:                                     ; preds = %cond_31_case_1, %cond_31_case_0
  %"034.0" = phi i64 [ 0, %cond_31_case_0 ], [ %53, %cond_31_case_1 ]
  %array_ptr44 = extractvalue { ptr, ptr, i64 } %"015.0", 0, !dbg !14
  %array_mask_ptr45 = extractvalue { ptr, ptr, i64 } %"015.0", 1, !dbg !14
  %array_offset46 = extractvalue { ptr, ptr, i64 } %"015.0", 2, !dbg !14
  %57 = icmp ult i64 1, 2, !dbg !14
  br i1 %57, label %61, label %58, !dbg !14

58:                                               ; preds = %cond_exit_31
  %59 = insertvalue { i1, { ptr, ptr, i64 }, i64 } { i1 false, { ptr, ptr, i64 } poison, i64 poison }, i64 %"034.0", 2, !dbg !14
  %60 = insertvalue { i1, { ptr, ptr, i64 }, i64 } %59, { ptr, ptr, i64 } %"015.0", 1, !dbg !14
  br label %67, !dbg !14

61:                                               ; preds = %cond_exit_31
  %62 = add i64 1, %array_offset46, !dbg !14
  call void @__barray_mask_check_not_borrowed(ptr %array_mask_ptr45, i64 %62), !dbg !14
  %63 = getelementptr inbounds i64, ptr %array_ptr44, i64 %62, !dbg !14
  %64 = load i64, ptr %63, align 4, !dbg !14
  store i64 %"034.0", ptr %63, align 4, !dbg !14
  %65 = insertvalue { i1, { ptr, ptr, i64 }, i64 } { i1 true, { ptr, ptr, i64 } poison, i64 poison }, i64 %64, 2, !dbg !14
  %66 = insertvalue { i1, { ptr, ptr, i64 }, i64 } %65, { ptr, ptr, i64 } %"015.0", 1, !dbg !14
  br label %67, !dbg !14

67:                                               ; preds = %58, %61
  %"047.0" = phi { i1, { ptr, ptr, i64 }, i64 } [ %66, %61 ], [ %60, %58 ], !dbg !14
  %68 = extractvalue { i1, { ptr, ptr, i64 }, i64 } %"047.0", 0
  switch i1 %68, label %69 [
    i1 true, label %72
  ]

69:                                               ; preds = %67
  %70 = extractvalue { i1, { ptr, ptr, i64 }, i64 } %"047.0", 2
  %71 = extractvalue { i1, { ptr, ptr, i64 }, i64 } %"047.0", 1
  br label %cond_42_case_0

72:                                               ; preds = %67
  %73 = extractvalue { i1, { ptr, ptr, i64 }, i64 } %"047.0", 2
  %74 = extractvalue { i1, { ptr, ptr, i64 }, i64 } %"047.0", 1
  br label %cond_42_case_1

cond_42_case_0:                                   ; preds = %69
  %75 = extractvalue { i32, ptr } { i32 1, ptr @3 }, 0, !dbg !15
  %76 = extractvalue { i32, ptr } { i32 1, ptr @3 }, 1, !dbg !15
  %77 = call i32 (ptr, ...) @printf(ptr @prelude.panic_template.3, i32 %75, ptr %76), !dbg !15
  call void @abort(), !dbg !15
  br label %cond_exit_42

cond_42_case_1:                                   ; preds = %72
  br label %cond_exit_42

cond_exit_42:                                     ; preds = %cond_42_case_1, %cond_42_case_0
  %"050.0" = phi i64 [ 0, %cond_42_case_0 ], [ %73, %cond_42_case_1 ]
  %"151.0" = phi { ptr, ptr, i64 } [ zeroinitializer, %cond_42_case_0 ], [ %74, %cond_42_case_1 ]
  %array_ptr70 = extractvalue { ptr, ptr, i64 } %"151.0", 0, !dbg !16
  %array_mask_ptr71 = extractvalue { ptr, ptr, i64 } %"151.0", 1, !dbg !16
  %array_offset72 = extractvalue { ptr, ptr, i64 } %"151.0", 2, !dbg !16
  %new_offset = add i64 %array_offset72, 1, !dbg !16
  call void @__barray_mask_check_not_borrowed(ptr %array_mask_ptr71, i64 %array_offset72), !dbg !16
  %78 = getelementptr inbounds i64, ptr %array_ptr70, i64 %array_offset72, !dbg !16
  %79 = load i64, ptr %78, align 4, !dbg !16
  %80 = insertvalue { ptr, ptr, i64 } poison, ptr %array_ptr70, 0, !dbg !16
  %81 = insertvalue { ptr, ptr, i64 } %80, ptr %array_mask_ptr71, 1, !dbg !16
  %82 = insertvalue { ptr, ptr, i64 } %81, i64 %new_offset, 2, !dbg !16
  %83 = insertvalue { i1, { ptr, ptr, i64 }, i64 } { i1 true, { ptr, ptr, i64 } poison, i64 poison }, i64 %79, 2, !dbg !16
  %84 = insertvalue { i1, { ptr, ptr, i64 }, i64 } %83, { ptr, ptr, i64 } %82, 1, !dbg !16
  %85 = extractvalue { i1, { ptr, ptr, i64 }, i64 } %84, 0
  switch i1 %85, label %86 [
    i1 true, label %87
  ]

86:                                               ; preds = %cond_exit_42
  br label %cond_53_case_0

87:                                               ; preds = %cond_exit_42
  %88 = extractvalue { i1, { ptr, ptr, i64 }, i64 } %84, 2
  %89 = extractvalue { i1, { ptr, ptr, i64 }, i64 } %84, 1
  br label %cond_53_case_1

cond_53_case_0:                                   ; preds = %86
  %90 = extractvalue { i32, ptr } { i32 1, ptr @4 }, 0, !dbg !17
  %91 = extractvalue { i32, ptr } { i32 1, ptr @4 }, 1, !dbg !17
  %92 = call i32 (ptr, ...) @printf(ptr @prelude.panic_template.4, i32 %90, ptr %91), !dbg !17
  call void @abort(), !dbg !17
  br label %cond_exit_53

cond_53_case_1:                                   ; preds = %87
  br label %cond_exit_53

cond_exit_53:                                     ; preds = %cond_53_case_1, %cond_53_case_0
  %"074.0" = phi i64 [ 0, %cond_53_case_0 ], [ %88, %cond_53_case_1 ]
  %"175.0" = phi { ptr, ptr, i64 } [ zeroinitializer, %cond_53_case_0 ], [ %89, %cond_53_case_1 ]
  %array_ptr88 = extractvalue { ptr, ptr, i64 } %"175.0", 0, !dbg !18
  %array_mask_ptr89 = extractvalue { ptr, ptr, i64 } %"175.0", 1, !dbg !18
  %array_offset90 = extractvalue { ptr, ptr, i64 } %"175.0", 2, !dbg !18
  %93 = add i64 %array_offset90, 0, !dbg !18
  call void @__barray_mask_check_not_borrowed(ptr %array_mask_ptr89, i64 %93), !dbg !18
  %94 = getelementptr inbounds i64, ptr %array_ptr88, i64 %93, !dbg !18
  %95 = load i64, ptr %94, align 4, !dbg !18
  %96 = insertvalue { ptr, ptr, i64 } poison, ptr %array_ptr88, 0, !dbg !18
  %97 = insertvalue { ptr, ptr, i64 } %96, ptr %array_mask_ptr89, 1, !dbg !18
  %98 = insertvalue { ptr, ptr, i64 } %97, i64 %array_offset90, 2, !dbg !18
  %99 = insertvalue { i1, { ptr, ptr, i64 }, i64 } { i1 true, { ptr, ptr, i64 } poison, i64 poison }, i64 %95, 2, !dbg !18
  %100 = insertvalue { i1, { ptr, ptr, i64 }, i64 } %99, { ptr, ptr, i64 } %98, 1, !dbg !18
  %101 = extractvalue { i1, { ptr, ptr, i64 }, i64 } %100, 0
  switch i1 %101, label %102 [
    i1 true, label %103
  ]

102:                                              ; preds = %cond_exit_53
  br label %cond_64_case_0

103:                                              ; preds = %cond_exit_53
  %104 = extractvalue { i1, { ptr, ptr, i64 }, i64 } %100, 2
  %105 = extractvalue { i1, { ptr, ptr, i64 }, i64 } %100, 1
  br label %cond_64_case_1

cond_64_case_0:                                   ; preds = %102
  %106 = extractvalue { i32, ptr } { i32 1, ptr @5 }, 0, !dbg !19
  %107 = extractvalue { i32, ptr } { i32 1, ptr @5 }, 1, !dbg !19
  %108 = call i32 (ptr, ...) @printf(ptr @prelude.panic_template.5, i32 %106, ptr %107), !dbg !19
  call void @abort(), !dbg !19
  br label %cond_exit_64

cond_64_case_1:                                   ; preds = %103
  br label %cond_exit_64

cond_exit_64:                                     ; preds = %cond_64_case_1, %cond_64_case_0
  %"092.0" = phi i64 [ 0, %cond_64_case_0 ], [ %104, %cond_64_case_1 ]
  %"193.0" = phi { ptr, ptr, i64 } [ zeroinitializer, %cond_64_case_0 ], [ %105, %cond_64_case_1 ]
  %array_ptr106 = extractvalue { ptr, ptr, i64 } %"193.0", 0, !dbg !20
  %array_mask_ptr107 = extractvalue { ptr, ptr, i64 } %"193.0", 1, !dbg !20
  %array_offset108 = extractvalue { ptr, ptr, i64 } %"193.0", 2, !dbg !20
  call void @free(ptr %array_ptr106), !dbg !20
  call void @free(ptr %array_mask_ptr107), !dbg !20
  ret void
}

declare ptr @malloc(i64)

; Function Attrs: nocallback nofree nounwind willreturn memory(argmem: write)
declare void @llvm.memset.p0.i64(ptr writeonly captures(none), i8, i64, i1 immarg) #0

define internal void @__barray_mask_check_not_borrowed(ptr %0, i64 %1) {
  %3 = udiv i64 %1, 64, !dbg !9
  %4 = getelementptr inbounds i64, ptr %0, i64 %3, !dbg !9
  %5 = load i64, ptr %4, align 4, !dbg !9
  %6 = urem i64 %1, 64, !dbg !9
  %7 = lshr i64 %5, %6, !dbg !9
  %8 = trunc i64 %7 to i1, !dbg !9
  br i1 %8, label %panic, label %ok, !dbg !9

panic:                                            ; preds = %2
  %9 = call i32 (ptr, ...) @printf(ptr @prelude.panic_template, i32 2, ptr @0), !dbg !9
  call void @abort(), !dbg !9
  unreachable, !dbg !9

ok:                                               ; preds = %2
  ret void, !dbg !9
}

declare i32 @printf(ptr, ...)

declare void @abort()

declare void @free(ptr)

attributes #0 = { nocallback nofree nounwind willreturn memory(argmem: write) }

!llvm.module.flags = !{!0}
!llvm.dbg.cu = !{!1}

!0 = !{i32 2, !"Debug Info Version", i32 3}
!1 = distinct !DICompileUnit(language: DW_LANG_Python, file: !2, producer: "hugr_llvm_test", isOptimized: false, runtimeVersion: 0, emissionKind: FullDebug)
!2 = !DIFile(filename: "/cmJrSnVYeXFf/zCkHdtWCCnkJhPKiWSKICgZuRNRvR/mbrfVq.gpy.py", directory: "/nyeIVwAutKJHa/EPSZwPXPeycUvnuj/xZKP/CTcNfsTEGLo")
!3 = distinct !DISubprogram(name: "_hl.main.1", linkageName: "_hl.main.1", scope: null, file: !4, line: 25254, type: !5, scopeLine: 25255, spFlags: DISPFlagLocalToUnit | DISPFlagDefinition, unit: !1)
!4 = !DIFile(filename: "/cmJrSnVYeXFf/zCkHdtWCCnkJhPKiWSKICgZuRNRvR/mbrfVq.gpy.py", directory: "")
!5 = !DISubroutineType(types: !6)
!6 = !{null}
!7 = !DILocation(line: 10060, column: 368, scope: !3)
!8 = !DILocation(line: 27062, column: 402, scope: !3)
!9 = !DILocation(line: 5388, column: 404, scope: !3)
!10 = !DILocation(line: 32551, column: 131, scope: !3)
!11 = !DILocation(line: 13582, column: 372, scope: !3)
!12 = !DILocation(line: 1712, column: 109, scope: !3)
!13 = !DILocation(line: 352, column: 366, scope: !3)
!14 = !DILocation(line: 21129, column: 412, scope: !3)
!15 = !DILocation(line: 4112, column: 51, scope: !3)
!16 = !DILocation(line: 31810, column: 83, scope: !3)
!17 = !DILocation(line: 21101, column: 431, scope: !3)
!18 = !DILocation(line: 16173, column: 468, scope: !3)
!19 = !DILocation(line: 4687, column: 439, scope: !3)
!20 = !DILocation(line: 2116, column: 303, scope: !3)
